[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "build",
]
build-backend = "setuptools.build_meta"

[project]
name = "python_trading_indicators"
version = "0.1.0"
description = "A comprehensive Python library for technical analysis indicators used in algorithmic trading"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "venantvr", email = "venantvr@gmail.com" },
]
maintainers = [
    { name = "venantvr", email = "venantvr@gmail.com" },
]
keywords = [
    "trading",
    "technical-analysis",
    "indicators",
    "finance",
    "rsi",
    "candlestick",
    "volatility",
    "algorithmic-trading",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
    "wheel>=0.40.0",
    "setuptools>=61.0.0",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-mock>=3.10.0",
]

[project.urls]
Homepage = "https://github.com/venantvr/Python.Trading.Indicators"
Repository = "https://github.com/venantvr/Python.Trading.Indicators.git"
Issues = "https://github.com/venantvr/Python.Trading.Indicators/issues"
Changelog = "https://github.com/venantvr/Python.Trading.Indicators/blob/main/CHANGELOG.md"
Documentation = "https://Python.Trading.Indicators.readthedocs.io/"

[tool.setuptools]
packages = [
    "python_trading_indicators",
    "python_trading_indicators.tools",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"*" = [
    "*.txt",
    "*.md",
]

[tool.black]
line-length = 88
target-version = [
    "py38",
    "py39",
    "py310",
    "py311",
    "py312",
]
include = "\\.pyi?$"
extend-exclude = "/(\n  # directories\n  \\.eggs\n  | \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.tox\n  | \\.venv\n  | build\n  | dist\n)/\n"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",
    "E501",
    "W503",
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    "venv",
]
